Merchant Admin View Model Validation Implementation

--- a/PaymentGateway.Merchant.Admin/Views/Merchant/Index.cshtml
+++ b/PaymentGateway.Merchant.Admin/Views/Merchant/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<PaymentGatewayData.Models.Merchant>
+﻿@model IEnumerable<PaymentGateway.Data.Models.Merchant>
 
 @{
     ViewData["Title"] = "Index";
