--- a/PaymentGateway.Merchant.Admin/Views/_ViewImports.cshtml
+++ b/PaymentGateway.Merchant.Admin/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using PaymentGatewayData
-@using PaymentGatewayData.Models
+@using PaymentGateway.Data.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
