--- a/PaymentGateway.Merchant.Admin/Views/Merchant/Node.cshtml
+++ b/PaymentGateway.Merchant.Admin/Views/Merchant/Node.cshtml
@@ -1,4 +1,4 @@
-﻿@model PaymentGatewayData.Models.Merchant
+﻿@model PaymentGateway.Merchant.Admin.Models.MerchantViewModel
 
 @{
     ViewData["Title"] = "Create";
@@ -11,6 +11,7 @@
         <form asp-action="Node">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="MerchantId" />
+            <input type="hidden" asp-for="OldUsername" />
             <div class="form-group">
                 <label asp-for="Username" class="control-label"></label>
                 <input asp-for="Username" class="form-control" />
@@ -21,14 +22,14 @@
                     <label asp-for="Password" class="control-label"></label>
                     <input asp-for="Password" class="form-control" />
                     <span asp-validation-for="Password" class="text-danger"></span>
-                </div>               
+                </div>
             </div>
             <div class="form-row">
                 <div class="form-group col-md-6">
                     <input type="submit" value="Submit" class="btn btn-primary btn-block" />
                 </div>
-                <div  class="form-group col-md-6">
-                    <a asp-action="Index"  class="btn btn-secondary btn-block"><i class="fa fa-table"></i> Back to List</a>
+                <div class="form-group col-md-6">
+                    <a asp-action="Index" class="btn btn-secondary btn-block"><i class="fa fa-table"></i> Back to List</a>
                 </div>
             </div>
         </form>
