Infrastructure + REST API implementation

--- a/PaymentGateway.MerchantAdmin/Views/Merchant/Index.cshtml
+++ b/PaymentGateway.MerchantAdmin/Views/Merchant/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<PaymentGateway.Data.Entity.Merchant>
+﻿@model IEnumerable<PaymentGateway.Domain.Entities.Merchant>
 
 @{
     ViewData["Title"] = "Index";
